@@ -1,4 +1,4 @@
-name: CI 
+name: Unit Tests 
 
 on: [push]
 
