@@ -1,0 +1,3 @@
+#! /bin/bash
+
+mkdir /tmp/test-dir
